Fixed detail view on mobile.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -331,6 +331,18 @@ td{
         width: 100% !important;
         height: auto !important;
     }
+    .detailimagewrapper{
+        width: 100% !important;
+        display: block;
+    }
+    .detailView p{
+        display: block;
+        width:100% !important;
+    }
+    .detailView{
+        width: 90% !important;
+        margin: 0 auto !important;
+    }
 
 }
 .projectimage{
